wording fixes and card spacing

--- a/src/stylesheets/_card.scss
+++ b/src/stylesheets/_card.scss
@@ -46,9 +46,8 @@
 
 /* Card title styling */
 .card-title {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins";
   font-weight: 600;
-  margin-top: 15px;
   color: #333333; /* Darker color for contrast */
   font-size: 1.5rem;
 }
